@@ -1,9 +1,10 @@
 {{$NEXT}}
     [Improvements]
+    - Added EIP-2930 transaction support
     - Remove Test::Fatal from test dependencies
-    - Dist::Zilla bundle updated
     [BugFixes]
     - Fix type check in sign_transaction
+    - Fix access list encoding
 0.019     2025-06-28 23:31:03-03:00 America/Sao_Paulo
 - Initial release of Blockchain-Ethereum toolkit as a unified distribution
 - Includes functionality from the following previously separate modules:
